--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -6,6 +6,11 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    transition: all ease-in-out 0.3s;
+
+    &:hover{
+        transform: scale(1.2);
+    }
 
     .infos {
         opacity: 0;
